--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,27 @@
 <resources>
     <string name="app_name">ShowTime</string>
+    <string name="enter_user_name">Enter User Name</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="login">Login</string>
+    <string name="logo">logo</string>
+    <string name="event_name">Event Name</string>
+    <string name="title_activity_tab">TabActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_bottom_tab">BottomTabActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_scan">Scan</string>
+    <string name="title_doorlist">Door List</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="msg_no_ticket_found">No Ticket Found</string>
+    <string name="btn_buy_now">Update</string>
+    <string name="btn_coming_soon">Back</string>
+    <string name="lbl_seats">Seats</string>
+    <string name="lbl_class">Class</string>
+    <string name="lbl_status">Status</string>
+    <string name="lbl_count">Count</string>
 </resources>
